2003-08-08  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (captured_mi_execute_command): Add "mi2" and "mi3" to
	interpreters that hack around CLI.
	* mi-interp.c (mi3_command_loop): New function.
	(mi_interpreter_resume): Check for "mi3", default to "mi2".

2003-08-07  Andrew Cagney  <cagney@redhat.com>

	* mi-interp.c (_initialize_mi_interp): Register "mi2" and "mi3".
	Make "mi" select "mi2".

2003-08-05  Andrew Cagney  <cagney@redhat.com>

	* mi-cmd-env.c (env_execute_cli_command): Use an explicit "%s %s"
	when constructing the run command.
	(mi_cmd_env_cd, mi_cmd_env_path, mi_cmd_env_dir): Simplify command
	string removing the "%s".

2003-08-04  Andrew Cagney  <cagney@redhat.com>

	* mi-cmds.h (struct mi_cli): Define.
	(struct mi_cmd): Change type of "cli" to "struct mi_cli".
	* mi-cmds.c (mi_cmds): Update table.
	* mi-parse.c (mi_parse): Update.
	* mi-main.c (mi_execute_cli_command): Add "args_p" parameter, make
	others constant.
	(mi_cmd_execute): Update call.
	(captured_mi_execute_command): Ditto.

2003-08-04  David Carlton  <carlton@kealia.com>

	* mi-main.c (mi_error_last_message): Add "%s" second argument to
	xasprintf call.

2003-06-28  Daniel Jacobowitz  <drow@mvista.com>

	* mi-out.c (mi_ui_out_impl): Add NULL for redirect member.

2003-06-17  Daniel Jacobowitz  <drow@mvista.com>

        * mi-cmds.c (mi_cmds): Add "-target-disconnect".

2003-06-11  David Carlton  <carlton@bactrian.org>

	* mi-cmd-stack.c: Include dictionary.h.
	(list_args_or_locals): Update use of ALL_BLOCK_SYMBOLS.

2003-06-11  Andrew Cagney  <cagney@redhat.com>

	* mi-main.c (get_register): Replace REGISTER_CONVERTIBLE with
	DEPRECATED_REGISTER_CONVERTIBLE.

2003-06-08  Andrew Cagney  <cagney@redhat.com>

	* mi-parse.c (_initialize_mi_parse): Delete function.
	* mi-main.c: Include "mi-main.h".
	* mi-interp.c (_initialize_mi_interp): Add declaration.
	* mi-cmd-stack.c: Include "stack.h".
	(select_frame_command_wrapper): Delete extern declaration.